2008-05-06  Johannes Schmid  <jhs@gnome.org>

	* plugins/document-manager/plugin.c (on_session_save):
	Do not reverse list of file in save-session (#531445)
	
	* plugins/sourceview/anjuta-view.c
	(anjuta_view_button_press_event):
	Set line to mouse location when popup-menu is displayed (#530689)

2008-05-02  Sébastien Granjoux  <seb.sfo@free.fr>

	* (added) plugins/terminal/anjuta-terminal-plugin.ui,
	plugins/terminal/Makefile.am,
	plugins/terminal/terminal.c:
	Add a context menu with copy/paste in terminal plugin

2008-05-02  Johannes Schmid  <jhs@gnome.org>

	* configure.in: changed gnome-build requirement, bumped version to 2.5.0
	* libanjuta/interfaces/libanjuta.idl:
	* plugins/project-manager/plugin.c (iproject_manager_get_packages),
	(iproject_manager_iface_init):
	Add an interface method to access the pkg-config data from gnome-build.
	
	* plugins/symbol-browser/plugin.c (project_root_added):
	Automatically load symbol from project configuration (proof-of-concept)

2008-05-01  Massimo Cora'  <maxcvs@email.it>

	* plugins/symbol-db/plugin.c (symbol_db_activate):
	* plugins/symbol-db/test/main.c (main):

	Adapt to changes in recent libgda

2008-05-01  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/run-program/execute.c:
	Fix run plugin again, previous patch was causing a crash when
	the program exist

2008-05-01  Johannes Schmid  <jhs@gnome.org>

	* plugins/document-manager/plugin.c (update_title):
	Fixed bug broken titles for new files

2008-05-01  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/anjuta-utils.c (anjuta_util_uri_get_dirname),
	(anjuta_util_replace_home_dir_with_tilde),
	(anjuta_util_str_middle_truncate):
	* libanjuta/anjuta-utils.h:
	Added some utility methods (derived from gedit)
	
	* plugins/document-manager/plugin.c (get_directory_display_name),
	(update_title):
	Really fix #530033 now

2008-05-01  Massimo Cora'  <maxcvs@email.it>

	* plugins/symbol-db/plugin.c (on_single_file_scan_end):